--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -3,7 +3,7 @@ RUN apt update -y
 RUN apt install openjdk-21-jdk -y
 RUN apt install maven -y
 WORKDIR /app
-ADD https://github.com/Siva825/spring-petclinic.git .
+ADD https://github.com/spring-projects/spring-petclinic .
 RUN mvn clean package -Dskiptests  
 EXPOSE 8080
 CMD ["java", "-jar", "/app/target/spring-petclinic-3.5.0-SNAPSHOT.jar"]
