--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 RUN apt update -y
 RUN apt install openjdk-21-jdk -y
 RUN apt install maven -y
-RUN apt install git
+RUN apt install git -y
 WORKDIR /app
 RUN git clone https://github.com/Siva825/spring-petclinic.git .
 RUN mvn clean package -Dskiptests -Dcheckstyle.skip=true
